# nu_plugin_weather

./: Cargo.toml  README.md
src/: README.md  lib.rs  main.rs  weather.rs
src/nu/: mod.rs
