[package]
name = "nu_plugin_weather"
version = "0.1.0"
authors = ["Ryan Blecher <notryanb@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", features = ["compat", "io-compat"] }
nu-errors = "0.15.0"
nu-plugin = "0.15.0"
nu-protocol = "0.15.0"
nu-source = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "1.0.3"
